Bug 387257 - Cancel button in toolbar color selector doesn't cancel
Summary: Cancel button in toolbar color selector doesn't cancel
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-24 12:29 UTC by Nicholas LaPointe
Modified: 2017-11-24 14:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicholas LaPointe 2017-11-24 12:29:06 UTC
When selecting a color from the selector in the toolbar (between patterns and brush settings), the color is changed immediately.
Pressing cancel exits the dialog without restoring the old color.
Comment 1 Halla Rempt 2017-11-24 14:27:02 UTC
Git commit 92d5ba7cc4bb84e5c8d4501ffb716feed69039ff by Boudewijn Rempt.
Committed on 24/11/2017 at 14:26.
Pushed by rempt into branch 'master'.

On cancel, restore the original color

M  +9    -1    libs/ui/dialogs/kis_dlg_internal_color_selector.cpp
M  +3    -0    libs/ui/dialogs/kis_dlg_internal_color_selector.h

https://commits.kde.org/krita/92d5ba7cc4bb84e5c8d4501ffb716feed69039ff