On cancel, restore the original color

BUG:387257